added login and itinerary

--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Travel Planner</title>
+  <title>Dashboard - Travel Planner</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,16 +13,20 @@
         <li><a href="create-itinerary.html">Create Itinerary</a></li>
         <li><a href="view-itinerary.html">View/Edit Itinerary</a></li>
         <li><a href="settings.html">Settings</a></li>
-        <li><a href="login.html">Login</a></li>
+        <li><a href="logout.html">Logout</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <!-- Content for the home page or landing page -->
     <section>
-      <h1>Welcome to Travel Planner</h1>
-      <p>Start planning your next adventure!</p>
+      <h1>Welcome to Your Dashboard</h1>
+      <p>Manage your travel plans here:</p>
+      <ul>
+        <li><a href="create-itinerary.html">Create New Itinerary</a></li>
+        <li><a href="view-itinerary.html">View/Edit Existing Itineraries</a></li>
+        <li><a href="settings.html">Settings</a></li>
+      </ul>
     </section>
   </main>
 
