--- a/login.html
+++ b/login.html
@@ -2,32 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Travel Planner</title>
+  <title>Login - Travel Planner</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
+    <!-- Navigation for the login page -->
     <nav>
       <div class="logo">Travel Planner</div>
       <ul class="nav-links">
         <li><a href="create-itinerary.html">Create Itinerary</a></li>
         <li><a href="view-itinerary.html">View/Edit Itinerary</a></li>
         <li><a href="settings.html">Settings</a></li>
-        <li><a href="login.html">Login</a></li>
+        <!-- Additional links or navigation for logged-out users -->
       </ul>
     </nav>
   </header>
 
   <main>
-    <!-- Content for the home page or landing page -->
     <section>
-      <h1>Welcome to Travel Planner</h1>
-      <p>Start planning your next adventure!</p>
+      <h2>Login</h2>
+      <form id="loginForm">
+        <input type="text" id="usernameInput" placeholder="Enter Username">
+        <input type="password" id="passwordInput" placeholder="Enter Password">
+        <button type="submit">Login</button>
+      </form>
     </section>
   </main>
 
   <footer>
     <!-- Footer content -->
   </footer>
+
+  <script src="login.js"></script>
 </body>
 </html>
