--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <nav>
-      <div class="logo">Travel Planner</div>
+      <div class="logo">TravelPlanX</div>
       <ul class="nav-links">
         <li><a href="create-itinerary.html">Create Itinerary</a></li>
         <li><a href="view-itinerary.html">View/Edit Itinerary</a></li>
@@ -22,7 +22,7 @@
     <section>
       <h1>Welcome to Your Dashboard</h1>
       <p>Manage your travel plans here:</p>
-      <ul>
+      <ul class="sec-link">
         <li><a href="create-itinerary.html">Create New Itinerary</a></li>
         <li><a href="view-itinerary.html">View/Edit Existing Itineraries</a></li>
         <li><a href="settings.html">Settings</a></li>
@@ -31,7 +31,7 @@
   </main>
 
   <footer>
-    <!-- Footer content -->
+   
   </footer>
 </body>
 </html>
