--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <nav>
-      <div class="logo">Travel Planner</div>
+      <div class="logo">TravelPlanX</div>
       <ul class="nav-links">
         <li><a href="create-itinerary.html">Create Itinerary</a></li>
         <li><a href="view-itinerary.html">View/Edit Itinerary</a></li>
@@ -19,15 +19,15 @@
   </header>
 
   <main>
-    <!-- Content for the home page or landing page -->
+    
     <section>
-      <h1>Welcome to Travel Planner</h1>
+      <h1>Welcome to TravelPlanX</h1>
       <p>Start planning your next adventure!</p>
     </section>
   </main>
 
   <footer>
-    <!-- Footer content -->
+   
   </footer>
 </body>
 </html>
