--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
 
   <main>
     
-    <section>
+    <section class="main-section">
       <h1>Welcome to TravelPlanX</h1>
       <p>Start planning your next adventure!</p>
+      <img class="image" src="travel-tourism-background-concept-airplane-260nw-1615461409.jpg" alt="Travel Background Image">
+
+
+
     </section>
   </main>
 
